--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "lukasss93/minecraft-tools",
-	"description": "Minecraft Tools",
+	"description": "Minecraft Tools library for some basic API information.",
 	"license": "MIT",
 	"authors": [
 		{
@@ -9,7 +9,8 @@
 		}
 	],
 	"require": {
-		"digitalnature/php-ref": "^1.2",
+		"php": ">=5.6",
+		"ext-json":"*",
 		"guzzlehttp/guzzle": "^6.3"
 	},
 	"autoload": {
